--- a/cheats/index.html
+++ b/cheats/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 title: "Cheats"
-active_title： "Cheats"
+active_title: "Cheats"
 ---
+
 <!-- BEGIN CHEATS BLOCK -->
 <ul>{% for cheat in site.cheats %}
 <li><a href="{{ cheat.url }}">{{ cheat.title }}</a></li>
