--- a/creative/index.html
+++ b/creative/index.html
@@ -11,7 +11,7 @@ INSPECT:
 {{ site.creative | inspect }}
 -->
 {% for create in site.creative %}
-    {% if create.dispaly %}
+    {% if create.display %}
 	{% assign tempSubArray = '' | split: '/' %}
 	{% assign the_creative_img = site.url | append: site.path.images | append: '/creative/' | append: create.cover.url %}
 
