--- a/about/index.html
+++ b/about/index.html
@@ -17,5 +17,5 @@ active_title: "About"
   }
 </style>
 {% include gap.html %}
-{% include card_profile_bubble.html title=site.name subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image=site.data.base64.pixel1trans maxwidth="100%" %}
+{% include card_profile_bubble.html title=site.author subtitle=site.alias desc=site.description url=site.url github=site.github_url email=site.email image=site.data.base64.pixel1trans maxwidth="100%" %}
 {% include signature.html %}
