--- a/_creative/ef1error.html
+++ b/_creative/ef1error.html
@@ -6,7 +6,7 @@ date: 20200708T180000+08:00
 desc: "騎記歐版 EF1 故障碼解析"
 cover:
   url: 'ef1error.png'
-  format: ''png'
+  format: 'png'
 display: false
 ---
 <!DOCTYPE html>
