--- a/navigator/index.html
+++ b/navigator/index.html
@@ -25,7 +25,7 @@ description: "A web sites navigation page."
     <nav id="sidebar" class="sidebar-wrapper">
       <div class="sidebar-content">
         <div class="sidebar-brand">
-          <a href="#">{{ page.title }}</a>
+          <a href="{{ site.url }}">{{ site.name }}</a>
           <div id="close-sidebar">
             <i class="fas fa-times"></i>
           </div>
