--- a/navigator/index.html
+++ b/navigator/index.html
@@ -140,24 +140,24 @@ description: "A web sites navigation page."
               {% for category in section.categories %}
                 {% for collection in category.collections %}
             <!-- section -->
-            <div id="{{ section.title }}_{{ category.title }}_{{ collection.title }}">
-            <h3 class="section_title">{{ collection.title }}</h3>
-            <div class="grid" style="word-break: break-all;">
-              {% for link in collection.links %}
-              <div class="cell">
-                <figure class="icon">
-                  <img class="icon-image" src="./icons/{% if link.image.size > 0 %}{{ link.image }}{% else %}general{% endif %}.png" alt="icon">
-                  <figcaption>
-                    <div>
-                      <p toc-skip="true" class="icon-title">{{ link.title }}</p>
-                    </div>
-                  </figcaption>
-                  <a class="icon-link" href="{{ link.url }}"></a>
-                </figure>
+            <div class="icons-grid-list" id="{{ section.title }}_{{ category.title }}_{{ collection.title }}">
+              <h3 class="icons-section-title">{{ collection.title }}</h3>
+              <div class="grid" style="word-break: break-all;">
+                {% for link in collection.links %}
+                <div class="cell">
+                  <figure class="icon">
+                    <img class="icon-image" src="./icons/{% if link.image.size > 0 %}{{ link.image }}{% else %}general{% endif %}.png" alt="icon">
+                    <figcaption>
+                      <div>
+                        <p toc-skip="true" class="icon-title">{{ link.title }}</p>
+                      </div>
+                    </figcaption>
+                    <a class="icon-link" href="{{ link.url }}"></a>
+                  </figure>
+                </div>
+                {% endfor %}
               </div>
-              {% endfor %}
             </div>
-          </div>
           <!-- section -->
               {% endfor %}
             {% endfor %}
