font-awesome.min.css

--- a/navigator/index.html
+++ b/navigator/index.html
@@ -10,7 +10,7 @@ description: "A web sites navigation page."
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <link rel='stylesheet' href='./bootstrap_4.1.1.css'>
-  <link rel='stylesheet' href='./fontawesome_v5.0.13_all.css'>
+  <link rel='stylesheet' href='{{ site.url }}/assets/css/font-awesome.min.css'>
   <link rel="stylesheet" href="./master.css">
 
 </head>
