--- a/navigator/index.html
+++ b/navigator/index.html
@@ -7,8 +7,7 @@ description: "A web sites navigation page."
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>{{ page.title }}</title>
+  {% include layout_head.html %}
   <link rel='stylesheet' href='./bootstrap_4.1.1.css'>
   <link rel='stylesheet' href='{{ site.url }}/assets/css/font-awesome.min.css'>
   <link rel="stylesheet" href="./master.css">
