--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>AsciiDoctor.js</title>
+		<title>AsciiDoctor Live Editor by Ezra v0.0.1</title>
 
 		<style type="text/css">
       .function_area {
