--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -201,9 +201,9 @@
     <span id="brand"><strong>AsciiDoctor Live</strong> <span id="filename"></span></span>
     <nav>
       <label>文档：</label>
-      <input type='file' onchange='loadFile(this)'>
+      <input type='file' name="Open AsciiDoc" onchange='loadFile(this)'>
   		<label>样式：</label>
-  		<input type='file' accept='text/css' onchange='loadCss(this)'>
+  		<input type='file' accept='text/css' name="Open Stylesheet" onchange='loadCss(this)'>
       <label>在线样式：</label>
       <select id="css-list">
         <option value="NONE" selected>无样式</option>
